--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -788,6 +788,9 @@ color: var(--light-gray);
   font-size: 2.4rem;
   
 }
+.featured-card-right img{
+  border-radius: 16px;
+}
 
 @keyframes ticker-scroll {
   0% {
