--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,7 @@
   --medium-gray: #1d1d1d;
   --light-gray: #808080;
   --lighter-gray: #A0A0A0;
+  --green:#d0ff71;
   --menu-hover-gray: #999;
   --section-padding: 8rem 0;
   --font-primary: 'Inter', sans-serif;
@@ -1595,3 +1596,4 @@ flex-direction: column!important;}
 }
 
 
+}
