--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,7 +43,7 @@ body {
   line-height: 1.5;
   color: var(--text-color);
   cursor: default;
-  background-color: var(--dark-gray);
+  background-color: #0E0F11;
 }
 h3,h2,p,h4{
   cursor: auto;
@@ -891,7 +891,7 @@ color: var(--light-gray);
 .our-clients ul li{
   font-size: var(--text-lg);
 }
-
+ 
 .our-clients {
   padding: var(--section-padding);
 }
