--- a/public/css/style.css
+++ b/public/css/style.css
@@ -56,7 +56,7 @@ h3, h2, p, h4 {
     position: relative;
     min-height: 100vh;
     background-size: cover;
-    background-image: url('../images/g-back.png');
+    background-image: url('../images/g-back.jpg');
     background-repeat: no-repeat;
 }
 
